--- a/band/promo.html
+++ b/band/promo.html
@@ -33,10 +33,11 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Boulder event calendars</h3>
   <ul>
-<li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau</a>
+<li><a href="http://bouldercountyevents.com" target="_blank">Boulder Weekly (CitySpark)</a>
+<li><a href="http://www.dailycamera.com/events/things-to-do#!/" target="_blank">Daily Camera (SpinGo)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
+<li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
-<li><a href="https://www.spingo.com/submit/" target="_blank">SpinGo (Boulder Weekly, Daily Camera)</a>
   </ul>
   <p>
   <h3>Denver event calendars</h3>
