fix event calendar links

--- a/band/promo.html
+++ b/band/promo.html
@@ -31,19 +31,15 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <li><b>Wibby Brewing</b>, 209 Emery St, Longmont, CO 80501, 303-776-4594, <a href="http://www.wibbybrewing.com" target="_blank">http://www.wibbybrewing.com</a></li>
   </ul>
   <p>
-  <h3>Boulder event calendars</h3>
+  <h3>Event calendars</h3>
   <ul>
 <li><a href="http://bouldercountyevents.com" target="_blank">Boulder Weekly (CitySpark)</a>
 <li><a href="http://www.dailycamera.com/events/things-to-do#!/" target="_blank">Daily Camera (SpinGo)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau</a>
-<li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU Concert Calendar</a>
-  </ul>
-  <p>
-  <h3>Denver event calendars</h3>
-  <ul>
+<li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU</a>
+<li><a href="http://events.publicbroadcasting.net/kuvo/events.eventsmain?action=submitEvent" target="_blank">KUVO</a>
 <li><a href="http://calendar.denverpost.com" target="_blank">Denver Post (CitySpark)</a>
-<li><a href="http://events.publicbroadcasting.net/kuvo/events.eventsmain?action=submitEvent" target="_blank">KUVO Events Calendar</a>
 <li><a href="http://marqueemag.com/calendar" target="_blank">Marquee Magazine (SpinGo)</a>
 <li><a href="http://www.denver.org/events/submit-event/" target="_blank">VISIT DENVER</a>
 <li><a href="http://www.westword.com/feedback/SubmitAnEvent/" target="_blank">Westword</a>
