--- a/calendar.html
+++ b/calendar.html
@@ -32,6 +32,6 @@
 <div style="font:12px arial">
 Copyright &copy; 2011-2017 Purple Squirrel - All Rights Reserved
 </div>
- </center>>
+</center>
 </body>
 </html>
