add Longmont Jazz Assoc

--- a/band/promo.html
+++ b/band/promo.html
@@ -40,8 +40,8 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <p>
   <h3>Miscellaneous calendars and mailing lists</h3>
   <ul>
-<li><a href="http://jazznoco.com" target="_blank">Jazz Northern Colorado</a>
-<li><a href="http://www.jazzinboulder.com" target="_blank">JazzInBoulder.com</li>
+<li><a href="http://www.jazzinboulder.com" target="_blank">Jazz In Boulder</a>, Christine Robertson - <a href="mailto:jazzinboulder@gmail.com?Subject=Jazz%20Calendar">send email</a></li>
+<li><a href="http://www.longmontjazz.com/jazz-calendar.php" target="_blank">Longmont Jazz Association</a>, Boulder County gigs - <a href="mailto:longmontjazz@comcast.net?Subject=Jazz%20Calendar">send email</a></li>
   </ul>
 </body>
 </html>
