--- a/band/promo.html
+++ b/band/promo.html
@@ -34,7 +34,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <h3>Event calendars</h3>
   <ul>
 <li><a href="http://bouldercountyevents.com" target="_blank">Boulder Weekly (CitySpark)</a>
-<li><a href="http://www.dailycamera.com/events/things-to-do#!/" target="_blank">Daily Camera (SpinGo)</a>
+<li><a href="http://www.dailycamera.com/events/things-to-do#!/" target="_blank">Daily Camera (CitySpark)</a>
 <li><a href="http://www.boulderdowntown.com/events/submit" target="_blank">Downtown Boulder</a>
 <li><a href="http://www.bouldercoloradousa.com/events/submit-an-event-to-the-boulder-calendar/" target="_blank">Boulder Convention and Visitors Bureau</a>
 <li><a href="http://www.kgnu.org/cgi-bin/noticeform.py?Type=ConcertCalendar" target="_blank">KGNU</a>
