--- a/info.html
+++ b/info.html
@@ -61,7 +61,8 @@ Drums:
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> | 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> | 
 <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> | 
-Matt Houston
+Matt Houston |
+<a href="https://www.facebook.com/alejandro.castano.94" target="_blank">Alejandro Casta&#241;o</a> | 
 <p>
 Keys: 
 <a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> | 
