--- a/info.html
+++ b/info.html
@@ -61,6 +61,7 @@ Drums:
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> | 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> | 
 <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> | 
+<a href="https://www.facebook.com/raoul.rossiter" target="_blank">Raoul Rossiter</a> | 
 Matt Houston
 <p>
 Keys: 
