add Adam Galblum

--- a/info.html
+++ b/info.html
@@ -72,9 +72,12 @@ Keys:
 <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
 <p>
 Horns: 
-<a href="http://www.darrenkramer.com" target="_blank">Darren Kramer</a> | 
-<a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby</a> | 
-<a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz</a>
+<a href="http://www.darrenkramer.com" target="_blank">Darren Kramer (trombone)</a> | 
+<a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby (trumpet)</a> | 
+<a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz (sax)</a>
+<p>
+Strings: 
+<a href="http://www.adamgalblum.com" target="_blank">Adam Galblum (violin)</a> 
 </div>
 <br><br>
 <div style="font:12px arial">
