--- a/info.html
+++ b/info.html
@@ -48,36 +48,58 @@ commercials and theater.
 <p>
 <b>Honorary squirrels</b> ...
 <p>
-Bass:  
+<table>
+<tbody style="font-size: 14px">
+<tr>
+<td valign="top">Bass:</td>
+<td>
 <a href="http://www.markdiamondmusic.com" target="_blank">Mark Diamond</a> | 
 <a href="https://www.facebook.com/paul.mcdaniel.33821" target="_blank">Paul McDaniel</a> | 
 <a href="https://www.facebook.com/chris.engleman.9" target="_blank">Chris Engleman</a> | 
 <a href="https://ericthorin.com" target="_blank">Eric Thorin</a> | 
 <a href="https://www.facebook.com/ron.bland.14" target="_blank">Ron Bland</a> |
 <a href="http://colorado.academia.edu/BrianCasey" target="_blank">Brian Casey</a> | 
-<a href="https://www.facebook.com/patrick.mcdevitt.353" target="_blank">Patrick McDevitt</a>
-<p>
-Drums:  
+<br>
+<a href="https://www.facebook.com/patrick.mcdevitt.353" target="_blank">Patrick McDevitt</a> |
+<a href="https://www.facebook.com/dittoddt" target="_blank">Dwight Thompson</a>
+</td>
+</tr>
+<tr>
+<td valign="top">Drums:</td>
+<td>
 <a href="http://www.christianteele.com" target="_blank">Christian Teele</a> | 
 <a href="https://www.facebook.com/matthew.amundson.1" target="_blank">Matt Amundson</a> | 
 <a href="http://www.deanoldencott.com" target="_blank">Dean Oldencott</a> | 
-<a href="https://www.facebook.com/raoul.rossiter" target="_blank">Raoul Rossiter</a> | 
 Matt Houston |
-<a href="https://www.facebook.com/alejandro.castano.94" target="_blank">Alejandro Casta&#241;o</a> 
-<p>
-Keys: 
+<a href="https://www.facebook.com/alejandro.castano.94" target="_blank">Alejandro Casta&#241;o</a> |
+<a href="https://www.facebook.com/raoul.rossiter" target="_blank">Raoul Rossiter</a>
+</td>
+</tr>
+<tr>
+<td valign="top">Keys:</td>
+<td>
 <a href="http://www.ericgunnison.com" target="_blank">Eric Gunnison</a> | 
 <a href="https://www.facebook.com/victor.mestasperez" target="_blank">Victor Mestas</a> | 
 <a href="http://thurstongroup.webs.com" target="_blank">Stephen Thurston</a> | 
 <a href="http://www.ericmoonmusic.com" target="_blank">Eric Moon</a>
-<p>
-Horns: 
+</td>
+</tr>
+<tr>
+<td valign="top">Horns:</td>
+<td>
 <a href="http://www.darrenkramer.com" target="_blank">Darren Kramer (trombone)</a> | 
 <a href="https://www.facebook.com/tim.libby.96" target="_blank">Tim Libby (trumpet)</a> | 
 <a href="http://www.bobbyrebz.com" target="_blank">Bob Rebholz (sax)</a>
-<p>
-Strings: 
+</td>
+</tr>
+<tr>
+<td valign="top">Strings:</td>
+<td>
 <a href="http://www.adamgalblum.com" target="_blank">Adam Galblum (violin)</a> 
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 <br><br>
 <div style="font:12px arial">
