--- a/band/promo.html
+++ b/band/promo.html
@@ -19,9 +19,9 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <ul>
   <li><b>Appaloosa Grill</b>, 535 16th St #11, Denver, CO 80202, 720-932-1700, <a href="http://appaloosagrill.com" target="_blank">http://appaloosagrill.com</a></li>
   <li><b>The Arvada Tavern</b>, 5707 Olde Wadsworth Blvd, Arvada, CO 80002, 303-690-6269, <a href="http://arvadatavern.com" target="_blank">http://arvadatavern.com</a></li>
-  <li><b>Baur's Listening Lounge</b>, 1512 Curtis Street, Denver, CO 80202, 303-615-4000, <a href="http://baursmagic.com" target="_blank">http://baursmagic.com</a></li>
   <li><b>Caffe Sole</b>, 637R South Broadway, Boulder, CO 80305, 303-499-2985, <a href="http://www.caffesole.com" target="_blank">http://www.caffesole.com</a></li>
-  <li><b>DazzleJazz</b>, 930 Lincoln St, Denver, CO 80203, 303-839-5100, <a href="http://dazzlejazz.com" target="_blank">http://dazzlejazz.com</a></li>
+  <li><b>Dazzle</b>, 1512 Curtis St, Denver, CO 80202, 303-839-5102, <a href="http://dazzledenver.com" target="_blank">http://dazzledenver.com</a></li>
+  <li><b>The Kitchen Next Door</b>, 1035 Pearl St, Boulder, CO 80302, (720) 542-8159, <a href="https://www.nextdooreatery.com" target="_blank">https://www.nextdooreatery.com</a></li>
   <li><b>License No. 1</b>, 2115 13th St, Boulder, CO 80302, 303-443-0486, <a href="http://www.license1boulderado.com" target="_blank">http://www.license1boulderado.com</a></li>
   <li><b>The Laughing Goat</b>, 1709 Pearl Street, Bouler, CO 80302, (no phone), <a href="http://thelaughinggoat.com" target="_blank">http://thelaughinggoat.com</a></li>
   <li><b>Mountain Sun</b>, 1535 Pearl St, Boulder, CO 80302, 303-546-0886, <a href="http://www.mountainsunpub.com" target="_blank">http://www.mountainsunpub.com</a></li>
@@ -68,6 +68,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <ul>
 <li><a href="http://www.jazzinboulder.com" target="_blank">Jazz In Boulder</a>, Christine Robertson - <a href="mailto:jazzinboulder@gmail.com?Subject=Jazz%20Calendar">send email</a></li>
 <li><a href="http://www.longmontjazz.com/jazz-calendar.php" target="_blank">Longmont Jazz Association</a>, Boulder County gigs - <a href="mailto:longmontjazz@comcast.net?Subject=Jazz%20Calendar">send email</a></li>
+<li>Jazz Gossip (Miriam Paisner) - <a href="mailto:miriampaisner@hotmail.com?Subject=dates%20for%20Jazz%20Gossip" target="_blank">send email</a></li>
   </ul>
 </body>
 </html>
