--- a/band/promo.html
+++ b/band/promo.html
@@ -21,6 +21,7 @@ Purple Squirrel plays a rare breed of original instrumental music, infused with 
   <li><b>The Arvada Tavern</b>, 5707 Olde Wadsworth Blvd, Arvada, CO 80002, 303-690-6269, <a href="http://arvadatavern.com" target="_blank">http://arvadatavern.com</a></li>
   <li><b>Caffe Sole</b>, 637R South Broadway, Boulder, CO 80305, 303-499-2985, <a href="http://www.caffesole.com" target="_blank">http://www.caffesole.com</a></li>
   <li><b>Dazzle</b>, 1512 Curtis St, Denver, CO 80202, 303-839-5102, <a href="http://dazzledenver.com" target="_blank">http://dazzledenver.com</a></li>
+  <li><b>Eureka!</b>, 1048 Pearl St #10, Boulder, CO 80302, (720) 259-3636, <a href="https://www.facebook.com/EurekaBoulder/" target="_blank">https://www.facebook.com/EurekaBoulder/</a></li>
   <li><b>The Kitchen Next Door</b>, 1035 Pearl St, Boulder, CO 80302, (720) 542-8159, <a href="https://www.nextdooreatery.com" target="_blank">https://www.nextdooreatery.com</a></li>
   <li><b>License No. 1</b>, 2115 13th St, Boulder, CO 80302, 303-443-0486, <a href="http://www.license1boulderado.com" target="_blank">http://www.license1boulderado.com</a></li>
   <li><b>The Laughing Goat</b>, 1709 Pearl Street, Bouler, CO 80302, (no phone), <a href="http://thelaughinggoat.com" target="_blank">http://thelaughinggoat.com</a></li>
