add Lightning video

--- a/watch.html
+++ b/watch.html
@@ -26,6 +26,8 @@
    <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rrGTRRONx58" frameborder="0" allowfullscreen></iframe>
    <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/M6vtoOA73ik" frameborder="0" allowfullscreen></iframe>
+   <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/37fM-7BXJMU" frameborder="0" allowfullscreen></iframe>
    <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tJ-r93dRh_I" frameborder="0" allowfullscreen></iframe>
