shut down home page

--- a/index.html
+++ b/index.html
@@ -1,46 +1,64 @@
 <html>
 <body style="overflow:scroll">
- <center>
-   <img src="images/title.png"/>
-   <br>
-   <img src="images/photo.png"/>
-   <br>
-<!-- Begin navigation image map -->
-<div style="text-align:center; width:529px; margin-left:auto; margin-right:auto;">
-<img id="Image-Maps_9201303300052016" src="images/navigation-listen.png" usemap="#Image-Maps_9201303300052016" border="0" width="529" height="80" alt="" />
-<map id="_Image-Maps_9201303300052016" name="Image-Maps_9201303300052016">
-<area shape="rect" coords="113,0,187,68" href="watch.html" alt="" title=""    />
-<area shape="rect" coords="224,0,298,68" href="info.html" alt="" title=""    />
-<area shape="rect" coords="337,0,411,68" href="calendar.html" alt="" title=""    />
-<area shape="rect" coords="453,0,524,68" href="contact.html" alt="" title=""    />
-<area shape="rect" coords="527,78,529,80" href="http://www.image-maps.com/index.php?aff=mapped_users_9201303300052016" alt="Image Map" title="Image Map" />
-</map>
-<!-- Image map text links - Start - If you do not wish to have text links under your image map, you can move or delete this DIV -->
-<div style="text-align:center; font-size:12px; font-family:verdana; margin-left:auto; margin-right:auto; width:529px;">
-       <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="watch.html"></a>
-       <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="info.html"></a>
-       <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="calendar.html"></a>
-       <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="contact.html"></a>
-       <a style="text-decoration:none; color:black; font-size:12px; font-family:verdana;" href="http://www.image-maps.com/index.php?aff=mapped_users_9201303300052016"></a>
-</div>
-<!-- End navigation image map -->
-</div>
-   <br><br>
-<div style="font:18px arial; text-align:left; width:700">
-Get to know Purple Squirrel in 3 minutes - check out our CD sampler!
-</div>
+<center>
+<!-- title and image ======================================================= -->
+<img src="images/title.png"/>
 <br>
-<iframe width="600" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176161954&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<img src="images/photo.png"/>
+<!-- announcement ========================================================== -->
 <br><br>
-<div style="font:18px arial; text-align:left; width:700">
-Complete tracks from our "Split Shot" CD!
+<div style="font:24px arial; width:700">
+After 5 super-fun years, Purple Squirrel has disbanded.<br>
+Please check out one of our new projects below.<br>
+Thanks for your support!<br>
 </div>
+<!-- Rabblefish ============================================================ -->
 <br>
-<iframe width="600" height="375" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/58721502&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<div style="text-align:left; font:22px arial; width:800">
+<table cellspacing="15">
+<tr>
+<td>
+<a href="http://www.rabblefishmusic.com" target="_blank">
+<img src="images/Rabblefish.jpg" width="300" border="0">
+</a>
+</td>
+<td>
+Rabblefish plays a vibrant mix of jazz, funk and blues, ranging from 
+progressive to old school. The music features original compositions, 
+with a heavy emphasis on groove. Guitarist, composer and Purple Squirrel co-founder
+<a href="http://www.chrismalley.com" target="_blank">Chris Malley</a>
+leads the band, which features a rotating lineup of Colorado's finest musicians.
 <br><br>
-<div style="font:12px arial">
-Copyright &copy; 2011-2018 Purple Squirrel - All Rights Reserved
+<a href="http://www.rabblefishmusic.com" target="_blank">www.rabblefishmusic.com</a>
+</td>
+</tr>
+</table>
+<!-- Bob =================================================================== -->
+<br>
+<div style="text-align:left; font:22px arial; width:800">
+<table cellspacing="15">
+<tr>
+<td>
+<a href="http://www.robertschlesinger.com" target="_blank">
+<img src="images/BobSchlesinger.jpg" width="300" border="0">
+</a>
+</td> 
+<td>
+Purple Squirrel co-founder 
+<a href="http://www.robertschlesinger.com" target="_blank">Bob Schlesinger</a>
+is a pianist, producer and composer whose work covers diverse styles, including jazz, 
+blues, R&B and classical. Bob leads the Bob Schlesinger Trio.
+<br><br>
+<a href="http://www.robertschlesinger.com" target="_blank">www.robertschlesinger.com</a>
+</td>
+</tr>
+</table>
 </div>
- </center>
+<!-- copyright ============================================================= -->
+<br><br>
+<div style="text-align:center; font:12px arial">
+Copyright &copy; 2011-2018 Purple Squirrel - All Rights Reserverd
+</div>
+</center>
 </body>
 </html>
