--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <br>
 <img src="images/photo.png"/>
 <!-- announcement ========================================================== -->
-<br><br>
-<div style="font:24px arial; width:700">
-After 5 super-fun years, Purple Squirrel has disbanded.<br>
-Please check out one of our new projects below.<br>
-Thanks for your support!<br>
+<br><br><br>
+<div style="font:36px arial; width:800">
+Purple Squirrel has disbanded.<br>
+But check out what we're doing NOW!
 </div>
-<!-- Rabblefish ============================================================ -->
 <br>
-<div style="text-align:left; font:22px arial; width:800">
+<!-- Rabblefish ============================================================ -->
+<div style="text-align:left; font:28px arial; width:800">
 <table cellspacing="15">
 <tr>
 <td>
@@ -23,19 +22,23 @@ Thanks for your support!<br>
 </a>
 </td>
 <td>
-Rabblefish plays a vibrant mix of jazz, funk and blues, ranging from 
-progressive to old school. The music features original compositions, 
-with a heavy emphasis on groove. Guitarist, composer and Purple Squirrel co-founder
+Purple Squirrel co-founder, guitarist and composer 
 <a href="http://www.chrismalley.com" target="_blank">Chris Malley</a>
-leads the band, which features a rotating lineup of Colorado's finest musicians.
+leads the band
+<a href="http://www.rabblefishmusic.com" target="_blank">Rabblefish</a> &mdash;
+a vibrant mix of jazz, funk, rock and blues, ranging from 
+progressive to old school. Original compositions, with a heavy emphasis on groove. 
+And a rotating lineup of Colorado's finest musicians.
 <br><br>
 <a href="http://www.rabblefishmusic.com" target="_blank">www.rabblefishmusic.com</a>
+<a href="http://www.rabblefishmusic.com" target="_blank" style="text-decoration: none">
+&nbsp;&#128032
+</a>
 </td>
 </tr>
 </table>
 <!-- Bob =================================================================== -->
-<br>
-<div style="text-align:left; font:22px arial; width:800">
+<div style="text-align:left; font:28px arial; width:800">
 <table cellspacing="15">
 <tr>
 <td>
@@ -50,12 +53,15 @@ is a pianist, producer and composer whose work covers diverse styles, including 
 blues, R&B and classical. Bob leads the Bob Schlesinger Trio.
 <br><br>
 <a href="http://www.robertschlesinger.com" target="_blank">www.robertschlesinger.com</a>
+<a href="http://www.robertschlesinger.com" target="_blank" style="text-decoration: none">
+&nbsp;&#127929;
+</a>
 </td>
 </tr>
 </table>
 </div>
 <!-- copyright ============================================================= -->
-<br><br>
+<br>
 <div style="text-align:center; font:12px arial">
 Copyright &copy; 2011-2018 Purple Squirrel - All Rights Reserverd
 </div>
