tweak home page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ But check out what we're doing NOW!
 </div>
 <br>
 <!-- Rabblefish ============================================================ -->
-<div style="text-align:left; font:28px arial; width:800">
-<table cellspacing="15">
+<div style="text-align:left; width:800">
+<table style="font:22px arial" cellspacing="20">
 <tr>
 <td>
 <a href="http://www.rabblefishmusic.com" target="_blank">
@@ -38,8 +38,8 @@ And a rotating lineup of Colorado's finest musicians.
 </tr>
 </table>
 <!-- Bob =================================================================== -->
-<div style="text-align:left; font:28px arial; width:800">
-<table cellspacing="15">
+<div style="text-align:left; width:800">
+<table style="font:22px arial" cellspacing="20">
 <tr>
 <td>
 <a href="http://www.robertschlesinger.com" target="_blank">
