reword home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br><br><br>
 <div style="font:36px arial; width:800">
 Purple Squirrel has disbanded.<br>
-But check out what we're doing NOW!
+But check out what we're doing now!
 </div>
 <br>
 <!-- Rabblefish ============================================================ -->
